[package]
name = "kernel"
version = "0.1.0"
authors = ["StackDoubleFlow <ojaslandge@gmail.com>"]
edition = "2018"

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.7.7"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"

[dependencies.bootloader]
version = "0.8.3"
features = ["map_physical_memory"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"